# devex-metrics

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  stryker.config.mjs  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  collect-metrics.yml  deploy-pages.yml  mutation-improvement.yml
data/: rajbos.fixture.json
devex_metrics/: __init__.py  __main__.py  cli.py  version.py
devex_metrics/analyzers/: __init__.py  branch_protection.py  deployment_automation.py  dora_metrics.py  security_posture.py
devex_metrics/auth/: __init__.py  gh_cli.py
devex_metrics/collectors/: __init__.py  base.py  branch_protection.py  repositories.py  security.py  workflows.py
devex_metrics/models/: __init__.py
devex_metrics/reporters/: __init__.py  html_reporter.py
devex_metrics/scorers/: __init__.py  benchmarks.py  maturity_scorer.py
devex_metrics/utils/: __init__.py  progress.py  rate_limiter.py  yaml_parser.py
docs/state-of-devops-2026/: README.md  chapter-1-mature-devops-practices.md  chapter-2-centralized-systems.md  chapter-3-measurement-gaps.md  chapter-4-economic-value.md  conclusion.md  executive-summary.md  github-metrics-mapping.md  metrics-reference.md  research-methodology.md
scripts/: mutation-improvement-issue.mjs  mutation-summary.mjs  preview-dashboard.js
specs/001-org-metrics-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-org-metrics-analyzer/checklists/: requirements.md
specs/001-org-metrics-analyzer/contracts/: cli-schema.md
src/: build-pages.test.ts  build-pages.ts  cache.test.ts  cache.ts  collect.test.ts  collect.ts  github-client.test.ts  github-client.ts  index.ts  link-header.test.ts  link-header.ts  report.test.ts  report.ts  save-fixture.ts  types.ts
src/collectors/: contributors.test.ts  contributors.ts  copilot-agent.test.ts  copilot-agent.ts  dependents.test.ts  dependents.ts  index.ts  issues.test.ts  issues.ts  pull-requests.test.ts  pull-requests.ts  repo-graphql.test.ts  repo-graphql.ts  repos.test.ts  repos.ts  trends.test.ts  trends.ts
src/pages/: dashboard.ts  repo-row.ts  scripts.ts  styles.ts  utils.ts
tests/: conftest.py
